--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,15 +1,21 @@
 {% set currentRoute = app.request.attributes.get('_route') %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Dounia Manhouli - Développeuse Web junior{% endblock %}</title>
-        {% block stylesheets %}
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-            <link rel="stylesheet" href="{{ asset('css/mainStyle.css') }}">
-            <link rel="stylesheet" href="{{ asset('css/styleEffect.css') }}">
-            <link rel="stylesheet" href="{{ asset('css/styleTest.css') }}">
-        {% endblock %}
+          <head>
+                    <meta charset="UTF-8">
+                    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+                    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+                    <meta name="description" content="My Mom's Box, l'alliée des mamans">
+                    <title>{% block title %}Dounia Manhouli - Développeuse Web junior{% endblock %}</title>
+                     {% block stylesheets %}
+                                <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+                               <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.css">
+                               <link rel="stylesheet" href="{{ asset('css/mainStyle.css') }}">
+                                <link rel="stylesheet" href="{{ asset('css/styleEffect.css') }}">
+                                <link rel="stylesheet" href="{{ asset('css/styleTest.css') }}">
+                                <link rel="stylesheet" href="{{ asset('css/contactStyle.css') }}">
+                                <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+                    {% endblock %}
     </head>
     <body>
 
