--- a/public/css/styleEffect.css
+++ b/public/css/styleEffect.css
@@ -617,7 +617,8 @@ a:link, a:visited
     width: 100%;
     font-family: "Helvetica NeueThin";
     cursor: pointer;
-    padding: 15px;
+    padding: 10px;
+    font-size: 17px;
     background: #333;
     z-index: 1;
     border: solid var(--border-width) transparent;
@@ -848,17 +849,7 @@ a:link, a:visited
         text-shadow: 0 0.1em 0.1em #111;
     }
 }
-@media (min-width: 850px) {
-    body {
-        -webkit-box-pack: center;
-        justify-content: center;
-    }
-}
-@media (min-width: 1200px) {
-    .border-animation {
-        font-size: 17px;
-    }
-}
+
 
 /*Partie projets réalisés*/
 .title-green-gradient{
@@ -874,10 +865,10 @@ a:link, a:visited
 .card-effect {
     position: relative;
     top: 50%;
-    left: 50%;
+    left: 40%;
     transform: translate(-50%,-50%);
     height: 59rem;
-    width: 55rem;
+    width: 100%;
     background: #000;
     margin: 5rem;
     -moz-perspective: 200rem;
@@ -992,9 +983,9 @@ a:link, a:visited
 
 .overlay-2 .close{  /*propriété de la croix pr fermer */
     position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 3rem;
+    top: 25px;
+    right: 35px;
+    font-size: 4rem;
     color: white;
     cursor: pointer;
 }
@@ -1002,15 +993,19 @@ a:link, a:visited
 .overlay-2 img{
 }
 
+/*Footer*/
 
-
-/*Media Queries*/
-/*Partie responsive*/
-@media(min-width: 600px){
-
+.text {
+    font-weight: 100;
+    font-size: 28px;
+    color: snow;
+    font-family: "Helvetica NeueThin";
+    letter-spacing: 1px;
+}
+.dud {
+    color: #34C924;
 }
 
-@media(min-width: 1200px){
 
 
-}
+
