--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,11 +1,14 @@
 {% set currentRoute = app.request.attributes.get('_route') %}
+<!--
+Bienvenue sur mon site
+-->
 <!DOCTYPE html>
-<html>
+<html lang="fr">
           <head>
                     <meta charset="UTF-8">
                     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
                     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-                    <meta name="description" content="My Mom's Box, l'alliée des mamans">
+                    <meta name="description" content="Dounia Manhouli - Développeuse Web junior">
                     <title>{% block title %}Dounia Manhouli - Développeuse Web junior{% endblock %}</title>
                      {% block stylesheets %}
                                 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -15,36 +18,104 @@
                                 <link rel="stylesheet" href="{{ asset('css/styleTest.css') }}">
                                 <link rel="stylesheet" href="{{ asset('css/contactStyle.css') }}">
                                 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+                               <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+                               <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+                               <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+                               <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+                               <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+                               <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+                               <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+                               <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+                               <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+                               <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+                               <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+                               <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+                               <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+                               <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+                               <link rel="manifest" href="/manifest.json">
+                               <meta name="msapplication-TileColor" content="#ffffff">
+                               <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+                               <meta name="theme-color" content="#ffffff">
+
+
+                         <!--
+                         Source des icones:
+                        <a href="https://icons8.com/icon/2940/adobe-illustrator">Adobe Illustrator icon by Icons8</a>
+                        <a href="https://icons8.com/icon/777/mysql">MySQL icon by Icons8</a>
+                        <a href="https://icons8.com/icon/35183/trinity">Trinity icon by Icons8</a>
+                        <a target="_blank" href="https://icones8.fr/icons/set/developer">Développeur icon</a>
+                        <a target="_blank" href="https://icones8.fr/icons/set/matrix-desktop">Écran Matrix icon</a>
+                        <a target="_blank" href="https://icones8.fr/icons/set/archive-folder">Dossier d'archive icon</a> icône par <a target="_blank" href="https://icones8.fr">Icons8</a>
+                        <a target="_blank" href="https://icones8.fr/icons/set/composing-mail">Rédiger un courrier icon</a> icône par <a target="_blank" href="https://icones8.fr">Icons8</a>
+                        <a href="https://icons8.com/icon/73/accueil">Accueil icon by Icons8</a>
+                         -->
                     {% endblock %}
     </head>
     <body>
 
     <div class="row">
         <div class="col-12">
-            <canvas id="canvas">Dounia Manhouli</canvas>
-            <canvas id="canvas2">Développeuse web junior</canvas>
+            <canvas id="canvas" height="389" width="1330">Dounia Manhouli</canvas>
+            <canvas id="canvas2" height="389" width="1330">Développeuse web junior</canvas>
         </div>
     </div>
 
+    <div class="fixed-top">
+        <div class="collapse" id="navbarToggleExternalContent">
+            <div class=" p-4">
+                <ul class="ul-nav font-helvetica-thin text-white">
+                    <li>
+                        <a href="#anchor-remontada">
+{#                            <img src="{{ asset('img/icons8-accueil-48.png') }}" alt="icone accueil" width="30" height="30">#}
+                            <i class="fas fa-laptop-house" style="font-size: 20px;margin-left: 2px;"></i>
+                            Accueil
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#anchor-sum">
+                            <img src="{{ asset('img/icons8-trinity-48.png') }}" alt="icone trinity" width="25" height="25">
+                            Qui suis-je
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#anchor-competences">
+                            <img src="{{ asset('img/icons8-développeur-48.png') }}" alt="icone compétences" width="25" height="25">
+                            Mes compétences
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#anchor-projects">
+{#                            <img src="{{ asset('img/icons8-dossier-darchive-48.png') }}" alt="icone projets" width="30" height="30">#}
+                            <i class="fas fa-folder-open" style="font-size: 20px;margin-left: 2px;"></i>
+                            Mes projets réalisés
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#anchor-contact">
+{#                            <img src="{{ asset('img/icons8-rédiger-un-courrier-48.png') }}" alt="icone contact" width="30" height="30">#}
+                            <i class="far fa-edit" style="font-size: 20px;margin-left: 2px;"></i>
+                            Contactez-moi
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <nav class="navbar navbar-dark ">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </nav>
+    </div>
+          {% block body %} {% endblock %}
 
 
 
-
-
-
-
-
-
-
-    {% block body %} {% endblock %}
-
-
-
-        {% block javascripts %}
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-            <script src="{{ asset('js/script.js') }}"></script>
-        {% endblock %}
+          {% block javascripts %}
+                    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+                    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+                    <script src="{{ asset('js/script.js') }}"></script>
+          {% endblock %}
     </body>
 </html>
